2.5.4 - Simplified volume slider (click volume button to show slider, right-click button to mute) - Set volume slider to previously saved volume from LocalStorage - Focus and scroll to volume slider via hotkey U, or hide when it was already focused - Theme: since there appear to be no text readability issues on touch devices, don't use text-shadow on them

--- a/music.css
+++ b/music.css
@@ -154,8 +154,9 @@ input[type=range] {
 	input#volumeslider {
 		display: none;
 		width: 7em;
-		margin-top: 2.5px;
+		margin: 3px 0 0 -3px;
 	}
+		input#volumeslider::-webkit-slider-runnable-track { margin-top: 0px }
 
 ul {
 	display: none;
